--- a/responsive.css
+++ b/responsive.css
@@ -775,4 +775,8 @@ opacity: 0;
     .footer {
         margin-top: 20px;
     }
+	 .blog-item-content p {
+        font-size: 16px;
+        font-weight: 320;
+    }
 }
